[add] 双向队列增加addFirst、addLast、removeFirst、removeLast方法